Fix a stray String.format() user
This PacketUtils were missed in the previous update: migrate them.

Change-Id: Ifa6c50c1221cccf559b577b873e00933031bc663
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>